--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GH_TOKEN: ${{ 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 }}
+          GIST_ID: ${{ 7ed72727137e1db280da61436ab4fa69 }}
           TIMEZONE: Asia/Seoul
